# rolypolious

./: .gitignore  .gitlab-ci.yml  CHANGELOG  CONTRIBUTING.md  Cargo.toml  README.md  marker_search_logfile.txt  mkdocs.yml  prepare_external_data_logfile.txt  pyproject.toml  requirements.txt  rolypoly_recipe.yaml
.github/workflows/: pypi-release.yml
docs/mkdocs_docs/: contribute.md  dependencies.md  workflow.md
docs/mkdocs_docs/commands/: read_processing.md
misc/: quick_setup.sh  rolypoly_recipe.yaml
misc/exprimental/new_ORF_models/: dissect_gbff_by_genetic_code.py
notebooks/: get_rrna_info.ipynb  rolypoly_annotate_rna_demo.ipynb
notebooks/Collab/: rolypoly_annotate_rna_demo.ipynb
notebooks/Exprimental/: get_rrna_info.ipynb  trrna_stats.ipynb
notebooks/Exprimental/plast_mito_trrna_stats/: rrna_genome_mapping_taxonomy.ipynb  trees_test.ipynb  trrna_fetch.ipynb  trrna_prepare_fastqs.ipynb  trrna_test.ipynb
rust/src/: dedup.rs  filter.rs  format.rs  lib.rs  sample.rs  translate.rs
src/rolypoly/: __init__.py  rolypoly.py  rpconfig.json
src/rolypoly/commands/annotation/: annotate.py  annotate_RNA.py  annotate_prot.py  resolve_hits.py
src/rolypoly/commands/assembly/: assemble.py  co_assembly.py  extend.py  filter_contigs.py  refinement.py
src/rolypoly/commands/bining/: corrolate.py  termini.py
src/rolypoly/commands/host/: classify.py
src/rolypoly/commands/identify_virus/: draw_rdrp_msa.py  marker_search.py  search_viruses.py
src/rolypoly/commands/misc/: add_command.py  build_data.py  end_2_end.py  fastx_calc.py  fastx_stats.py  fetch_sra_fastq.py  get_external_data.py  prepare_external_data.py  quick_taxonomy.py  rename_seqs.py  sequence_stats.py  update.py  visualize.py
src/rolypoly/utils/: all_used_tools_dbs_citations.json  citation_reminder.py  config.py  dummy.py  fax.py  interval_ops.py  lazy_group.py  loggit.py  output_tracker.py  quick_setup.sh  release.py  test.py  various.py
src/rolypy/rolypoly/: __init__.py
src/rolyrs/: dedup.rs  filter.rs  rolypoly.rs  translate.rs
src/setup/: bump_commit_publish.sh  env_big.yaml  quick_setup.sh
src/setup/rolypoly-tk/: meta.yaml
src/tests/: cli_scenarios.json  logging_test_logger.py  test_cli_commands.py  test_cli_contracts.py  test_genome_fetch_mapping.py  test_mask_nuc_range_from_sam.py
testing_folder/inputs/: README.md
testing_folder/inputs/contigs/: influenza_A_PR8_segments.fasta  lassa_virus_segments.fasta  rift_valley_fever_segments.fasta  segmented_shared_termini.fasta  test_contig_abundance.tsv  test_contigs.fasta  test_fasta_for_masking.fasta
testing_folder/inputs/proteins/: test_proteins.faa
testing_folder/inputs/reads/: some_soil_shrinked.fq
(+43 files in other folders)
